# SwirlCraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SwirlCraft/: advection.h  arch.h  pressure_solve.h  project_nondivergent.h  swirl_craft.h
SwirlCraft/PressureSolve/: base_pressure_solver.h  conjugate_gradient.h  conjugate_gradient_solver.h  gauss_seidel.h  gauss_seidel_solver.h  jacobi.h  jacobi_gpu.h  jacobi_solver.h  pressure_solve_info.h
src/: advection.h  arch.h  domain.h  grid.h  pressure_solve.h  swirl_craft.h
src/PressureSolve/: gauss_seidel.h  jacobi.h  jacobi_gpu.cu
